kubernetes/minikube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost  # Change this to your actual domain or IP
      http:
        paths:
          - path: /api/v1/customers
            pathType: Prefix
            backend:
              service:
                name: customer
                port:
                  number: 80
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
